--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "@mui/x-data-grid": "^6.2.1",
+    "@nivo/bar": "^0.83.0",
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
@@ -37,6 +38,7 @@
     "react-router-dom": "^6.9.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "socket.io-client": "^4.6.2",
     "tw-elements": "^1.0.0-beta2",
     "yup": "^1.1.1"
   },
