--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^6.8.3",
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20",
+    "socket.io": "^4.6.2",
     "stripe": "^11.15.0",
     "styled-components": "^5.3.6",
     "validator": "^13.7.0"
